--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -229,6 +229,17 @@ GPU的显存分成两部分：
 
 ## Transformer加速
 
+### lightseq
+
+&nbsp;
+
+[LightSeq: A High Performance Inference Library for Transformers](https://arxiv.org/pdf/2010.13887.pdf)
+
+[LightSeq2: Accelerated Training for Transformer-based Models on GPUs](https://arxiv.org/pdf/2110.05722.pdf)
+
+[https://github.com/bytedance/lightseq](https://github.com/bytedance/lightseq)
+
+
 # PLM：仅编码器/仅解码器/编码器+解码器
 
 ## 仅编码器的BERT
@@ -2992,15 +3003,6 @@ JEST能够在仅使用10%的FLOP预算的情况下超越之前的最先进水平
 + int8量化：[LLM.int8(): 8-bit Matrix Multiplication for Transformers at Scale](https://arxiv.org/pdf/2208.07339.pdf)
 + int4量化：GLM中用了
 
-## lightseq
-
-&nbsp;
-
-[LightSeq: A High Performance Inference Library for Transformers](https://arxiv.org/pdf/2010.13887.pdf)
-
-[LightSeq2: Accelerated Training for Transformer-based Models on GPUs](https://arxiv.org/pdf/2110.05722.pdf)
-
-[https://github.com/bytedance/lightseq](https://github.com/bytedance/lightseq)
 
 ## PPL.LLM
 
