--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2517,13 +2517,13 @@ def xxx():
 + **推理（预测）**：所有参数都是fp16，相对fp32，存储变成一半，速度提升1倍。
 + **训练**：参数和梯度用**fp32存储**，但是在**计算前**会**转成fp16**，**计算后**再**转回fp32**。主要为了**防止溢出**，loss要乘一个scale，然后在fp16的梯度要除以scale。
 
-以adam优化器为例，对于每1个参数来说，fp16的训练占用20bytes显存，包括
+以adam优化器为例，对于每1个参数来说，fp16的训练占用20bytes显存，包括（详见：[https://zhuanlan.zhihu.com/p/519264636](https://zhuanlan.zhihu.com/p/519264636)）
 
 + fp16的参数：2bytes
 + fp16的梯度：2bytes（其实不一定是必须的，在ZeRO的[论文](https://arxiv.org/pdf/1910.02054v2.pdf)中有分析）
 + 优化器状态（optimizer state）：16bytes
     + fp32参数（4bytes）
-    + fp32梯度（4bytes）
+    + fp32梯度（4bytes）(zero论文里提到的，用于reduce之类操作时需要的fp32内存，以1.5B的gpt2为例，需要6GB内存，倒推回来，就需要6/1.5byte=4byte)
     + fp32 variance【历史梯度平方和】（4bytes）
     + fp32 momentum【历史梯度滑动平均】（4bytes）
 
