--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3478,6 +3478,48 @@ Llama 3的主要亮点：
 [https://huggingface.co/shenzhi-wang/Llama3-8B-Chinese-Chat](https://huggingface.co/shenzhi-wang/Llama3-8B-Chinese-Chat)
 
 
+### LLama3.1
+
+[最强模型Llama 3.1 405B正式发布，扎克伯格：开源引领新时代](https://mp.weixin.qq.com/s/QUWumWsTF_Qq77tdlyCHdg)
+
+[The Llama 3 Herd of Models](https://scontent-nrt1-2.xx.fbcdn.net/v/t39.2365-6/452387774_1036916434819166_4173978747091533306_n.pdf?_nc_cat=104&ccb=1-7&_nc_sid=3c67a6&_nc_ohc=t6egZJ8QdI4Q7kNvgGW93hm&_nc_ht=scontent-nrt1-2.xx&oh=00_AYCjkUrE9R1s1-mpRUu3d3p8QiFb42z-FDMJk9jwvHBuOQ&oe=66A5D24D)
+
+使用超过15万亿(15T)个token训练Llama 3.1 405B，优化了训练栈，在超过16,000个H100上训练
+
++ 选择了decoder only transformer with minor adaptations，而**不是MOE**，以最大限度地**提高训练稳定性**。
+  + 使用GQA with 8 key-value heads，提升推理速度，在decoding时降低k-v cache的大小
+  + 使用attention mask，**让同一序列里的不同documents不计算self-attention**。在标准的pretraining中影响不大，但**对于超长序列的continued pre-training非常重要**
+  + 128K tokens的vocab，100k的tiktoken tokenizer+28k的额外token，更好地支持非英语的语言。相比llama2，每个token能压缩的字符3.17变成3.94，**压缩率更高了**，即同样计算量能读更多文本，同时也能提升下游任务效果。
+  + 把RoPE的base frequency超参**加大到500,000**，能更好地**支持更长contexts**，[Effective Long-Context Scaling of Foundation Models](https://aclanthology.org/2024.naacl-long.260.pdf)说这个值对32768长度的context很有效。
++ 采用iterative post-training procedure，即预训练后进行多轮对齐，每轮都使用sft、RS（拒绝采样）、直接偏好优化(DPO, Direct Preference Optimization)，能够为**每轮**创建**最高质量的合成数据**，并提高每项能力（capability）的性能。
+  + 使用**合成数据生成(synthetic data generation)**来产生绝大多数SFT示例，并**多次迭代**以在所有能力生成越来越高质量的合成数据。
+  + 采用了多种数据处理技术来过滤这些合成数据，达到最高质量，并可以**跨能力**来**扩展微调数据量**。
+
+推理：从bf16量化为fp8
+
+参数量：
+
+|                          | 8B          | 70B         | 405B        |
+|--------------------------|-------------|-------------|-------------|
+| **Layers**               | 32          | 80          | 126         |
+| **Model Dimension**      | 4,096       | 8192        | 16,384      |
+| **FFN Dimension**        | 6,144       | 12,288      | 20,480      |
+| **Attention Heads**      | 32          | 64          | 128         |
+| **Key/Value Heads**      | 8           | 8           | 8           |
+| **Peak Learning Rate**   | 3e-4    | 1.5e-4  | 8e-5    |
+| **Activation Function**  | SwiGLU      | SwiGLU      | SwiGLU      |
+| **Vocabulary Size**      | 128,000     | 128,000     | 128,000     |
+| **Positional Embeddings**| RoPE ($$\theta$$ = 500,000) | RoPE ($$\theta$$ = 500,000) | RoPE ($$\theta$$ = 500,000) |
+
+
+还开放了一个生态系统：
+
++ model：[https://github.com/meta-llama/llama-models/tree/main/models/llama3_1](https://github.com/meta-llama/llama-models/tree/main/models/llama3_1)
++ tool-chain：[https://github.com/meta-llama/llama-toolchain](https://github.com/meta-llama/llama-toolchain)
++ agent-system：[https://github.com/meta-llama/llama-agentic-system](https://github.com/meta-llama/llama-agentic-system)
+
+
+
 ### Alpaca
 
 &nbsp;
