--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1765,6 +1765,39 @@ $$
 \mathcal{L}_{L M}(\mathbf{x})=\sum_{i=1}^n \log P\left(x_i \mid x_{<i}\right)
 $$
 
+
+对应到代码里：
+
+```python
+hidden_states = outputs[0]
+logits = self.lm_head(hidden_states)
+
+# gemma系列模型会做soft-cap
+cap = self.config.logits_soft_cap
+logits = nn.functional.tanh(logits / cap) * cap
+
+logits = logits.float()
+loss = None
+if labels is not None:
+    # Shift so that tokens < n predict n
+    ## 假设句子长度为4，词表有3个词，
+    ## logits: [ [0.1, 0.2, 0.7], [0.3, 0.4, 0.3], [0.5, 0.2, 0.3], [0.6, 0.1, 0.3] ]
+    ## labels: [0, 2, 1, 0]
+    ## shift_logits: [ [0.1, 0.2, 0.7], [0.3, 0.4, 0.3], [0.5, 0.2, 0.3]
+    shift_logits = logits[..., :-1, :].contiguous()
+    ## shift_labels: [2, 1, 0]
+    shift_labels = labels[..., 1:].contiguous()
+    # Flatten the tokens
+    loss_fct = CrossEntropyLoss()
+    # [bs, seq_len - 1, vocab_size] 变为 [(bs * (seq_len - 1)), vocab_size]
+    shift_logits = shift_logits.view(-1, self.config.vocab_size)
+    # [bs, seq_len - 1] 变为 [(bs * (seq_len - 1))]
+    shift_labels = shift_labels.view(-1)
+    # Enable model parallelism
+    shift_labels = shift_labels.to(shift_logits.device)
+    loss = loss_fct(shift_logits, shift_labels)
+```
+
 **前缀解码器**架构使用的是前缀语言建模任务，其loss**不涉及对前缀内token的预测**，故预训练时**涉及的序列中token较少**，故当预训练token数相同时，前缀语言模型的**性能往往略低**于传统语言模型任务。
 
 另外，自回归的loss：
