--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -563,6 +563,27 @@ $$
 \max _f \sum_{u \in \mathcal{V}} \log \operatorname{Pr}\left(N_K(u) \mid f(u)\right)
 $$
 
+### BYOL
+
+[Bootstrap your own latent: A new approach to self-supervised learning](https://arxiv.org/pdf/2006.07733)
+
+![byol](../assets/byol.png)
+
+loss是最小化两者的距离：
+
+$$
+\mathcal{L}_{\theta, \xi} \triangleq\left\|\overline{q_\theta}\left(z_\theta\right)-\bar{z}_{\xi}^{\prime}\right\|_2^2=2-2 \cdot \frac{\left\langle q_\theta\left(z_\theta\right), z_{\xi}^{\prime}\right\rangle}{\left\|q_\theta\left(z_\theta\right)\right\|_2 \cdot\left\|z_{\xi}^{\prime}\right\|_2}
+$$
+
+其中，$$\theta$$正常通过梯度下降更新，而$$\xi$$是stop-gradient的，通过对$$\theta$$进行moving average得到，在线只使用$$\theta$$对应的网络：
+
+$$
+\begin{aligned}
+& \theta \leftarrow \operatorname{optimizer}\left(\theta, \nabla_\theta \mathcal{L}_{\theta, \xi}^{\text {BYL }}, \eta\right), \\
+& \xi \leftarrow \tau \xi+(1-\tau) \theta,
+\end{aligned}
+$$
+
 ### label smoothing
 
 [https://spaces.ac.cn/archives/7359](https://spaces.ac.cn/archives/7359)
@@ -763,6 +784,12 @@ D2Q 算法的具体做法如下：
 
 ![sum](../assets/sum.png)
 
+## LTV——slateQ
+
+[SlateQ: A Tractable Decomposition for Reinforcement Learning with Recommendation Set](https://storage.googleapis.com/gweb-research2023-media/pubtools/5096.pdf)
+
+在ranking阶段，引入长期目标
+
 # 多目标
 
 ## 多目标+推荐综述
@@ -796,6 +823,13 @@ APG: 面向CTR预估的自适应参数生成网络
 摘要：目前基于深度学习的CTR预估模型（即 Deep CTR Models）被广泛的应用于各个应用中。传统的 Deep CTR Models 的学习模式是相对静态的，即所有的样本共享相同的网络参数。然而，由于不同样本的特征分布不尽相同，这样一种静态方式很难刻画出不同样本的特性，从而限制了模型的表达能力，导致次优解。在本文中，我们提出了一个高效率、高效果的通用模块，称为自适应参数生成网络(APG)。其可以基于不同的样本，动态的为CTR模型生成不同的模型参数。大量的实验表明，APG 能够被应用于各种 CTR 模型，并且显著的提升模型效果，同时能节省38.7%的时间开销和96.6%的存储。APG 已在阿里巴巴搜索广告系统部署上线，并获得3%的点击率增长和1%的广告收入增长。
 
 [APG: Adaptive Parameter Generation Network for Click-Through Rate Prediction](https://arxiv.org/abs/2203.16218)
+
+# 重排
+
+## LRF
+
+[Learned Ranking Function: From Short-term Behavior Predictions to Long-term User Satisfaction](https://www.arxiv.org/pdf/2408.06512)，rank阶段得到多目标的输出，需要把它们融合成一个目标，拿这个去排序，例如加法融合，LRF就是对其中搜参方法的优化
+
 
 
 # item冷启
@@ -947,6 +981,23 @@ PAL就是搞两个塔：
 
 [一文总览近年来YouTube推荐系统算法梳理](https://mp.weixin.qq.com/s/hj2ecwfrwCfvrafnsNiP-g)
 
+## 小红书
+
+[小红书推荐系统全解析：去中心化内容分发](https://mp.weixin.qq.com/s/QAei__DLF-agcVHrWM5EaA)
+
+中心化分发问题的本质在于**曝光越多、活跃度越高的内容**，往往能**获得更多的分发**，致使**普通创作者**的内容分发效果相对较差。此外，用户可能也会频繁看到热门兴趣，导致自身中长尾兴趣的内容所见相对较少。若要构建生态良好的社区，去中心化分发问题是需要解决的核心问题。
+
++ 对于内容侧而言，应设法通过多种方式识别和引入笔记本身的更多信号，而非仅依赖用户对笔记的行为进行分发。
++ 对于用户侧来说，应设法对用户的兴趣进行更优的挖掘，并在挖掘后予以一定的保护，鼓励用户中长尾和小众兴趣的内容分发，使用户的兴趣得到更全面的满足。
+
+参考蚂蚁的[Bootstrap Latent Representations for Multi-Modal Recommendation](https://arxiv.org/pdf/2207.05969)的BM3：
+
+![BM3](../assets/bm3.png)
+
++ $$L_{rec}$$：uid没mask和itemid mask的搞，uid mask的和itemid没mask的搞
++ $$L_{align}$$：itemid mask的和多模态没mask的搞
++ $$L_{mask}$$：多模态没mask的和多模态mask的搞
+
 # 其他
 
 ## 混合推荐架构
@@ -958,5 +1009,4 @@ PAL就是搞两个塔：
 [NeurIPS 2019 \| 从感知跃升到认知，这是阿里在认知智能推荐领域的探索与应用](https://mp.weixin.qq.com/s/MzF-UT5Hm071bTUTZpKDGw)
 
 [Learning Disentangled Representations for Recommendation](https://arxiv.org/pdf/1910.14238.pdf)
-
 
