--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -6446,6 +6446,155 @@ class IndexingTrainer(Trainer):
 
 ![tiger-personalized](../assets/tiger-personalized.jpg)
 
+rq-vae的介绍：[](https://arxiv.org/pdf/2306.08121)
+
+![rq-vae](../assets/rq-vae.png)
+
+原图里的下标有一些问题
+
++ $$x$$经过encoder得到的$$z$$，$$l=1$$，在第一个码本里ann找到最近的$$c_1=1$$，$$z-\boldsymbol{e}_{c_1}$$得到$$r_2$$
++ $$l=2$$，$$r_2$$在第2个码本里ann找到最近的$$c_2=4$$，$$r_2-\boldsymbol{e}_{c_2}$$得到$$r_3$$
++ $$l=3$$，$$r_3$$在第3个码本里ann找到最近的$$c_3=6$$，$$r_3-\boldsymbol{e}_{c_3}$$得到$$r_4$$
++ $$l=4$$，$$r_4$$在第4个码本里ann找到最近的$$c_4=2$$，$$r_4-\boldsymbol{e}_{c_4}$$得到$$r_5$$，
++ 对应的semantic id就是(1,4,6,2)，拿$$\hat {z} = 1+4+6+2$$再去过decoder得到$$\hat {x}$$
+
+最终的loss：$$\mathcal{L}_{\text {recon }} + \mathcal{L}_{\text {rqvae }}$$：
+
++ $$\mathcal{L}_{\text {recon }}=\|\boldsymbol{x}-\hat{\boldsymbol{x}}\|^2$$
++ $$\mathcal{L}_{\text {rqvae }}=\sum_{l=1}^L \beta\left\|\boldsymbol{r}_l-\operatorname{sg}\left[\boldsymbol{e}_{c_l}\right]\right\|^2+\left\|\operatorname{sg}\left[\boldsymbol{r}_l\right]-\boldsymbol{e}_{c_l}\right\|^2$$，sg是stop gradient
++ 码本的emb通过moving average更新
+
+
+rqvae的代码：[https://github.com/kakaobrain/rq-vae-transformer/blob/main/rqvae/models/rqvae/quantizations.py#L237](https://github.com/kakaobrain/rq-vae-transformer/blob/main/rqvae/models/rqvae/quantizations.py#L237)
+
++ VQ部分：
+
+```python
+class VQEmbedding(nn.Embedding):
+    def compute_distances(self, inputs):
+        codebook_t = self.weight[:-1, :].t()
+
+        (embed_dim, _) = codebook_t.shape
+        inputs_shape = inputs.shape
+        assert inputs_shape[-1] == embed_dim
+
+        inputs_flat = inputs.reshape(-1, embed_dim)
+        # a^2
+        inputs_norm_sq = inputs_flat.pow(2.).sum(dim=1, keepdim=True)
+        # b^2
+        codebook_t_norm_sq = codebook_t.pow(2.).sum(dim=0, keepdim=True)
+        # (a-b)^2 = a^2 + b^2 - 2ab
+        distances = torch.addmm(
+            inputs_norm_sq + codebook_t_norm_sq,
+            inputs_flat,
+            codebook_t,
+            alpha=-2.0,
+        )
+        distances = distances.reshape(*inputs_shape[:-1], -1)  # [B, h, w, n_embed or n_embed+1]
+        return distances
+
+    @torch.no_grad()
+    def find_nearest_embedding(self, inputs):
+        distances = self.compute_distances(inputs)  # [B, h, w, n_embed or n_embed+1]
+        embed_idxs = distances.argmin(dim=-1)  # use padding index or not
+
+        return embed_idxs
+
+    @torch.no_grad()
+    def _update_embedding(self):
+
+        n_embed = self.weight.shape[0] - 1
+        n = self.cluster_size_ema.sum()
+        normalized_cluster_size = (
+            n * (self.cluster_size_ema + self.eps) / (n + n_embed * self.eps)
+        )
+        self.weight[:-1, :] = self.embed_ema / normalized_cluster_size.reshape(-1, 1)
+
+    def forward(self, inputs):
+        embed_idxs = self.find_nearest_embedding(inputs)
+        if self.training:
+            if self.ema:
+                self._update_buffers(inputs, embed_idxs)
+        
+        embeds = self.embed(embed_idxs)
+
+        if self.ema and self.training:
+            self._update_embedding()
+
+        return embeds, embed_idxs
+```
+
++ RQ部分
+
+```python
+class RQBottleneck(nn.Module):
+    def __init__(...):
+        codebooks = [VQEmbedding(self.n_embed[idx], 
+                                    embed_dim, 
+                                    decay=self.decay[idx], 
+                                    restart_unused_codes=restart_unused_codes,
+                                    ) for idx in range(self.code_shape[-1])]
+        self.codebooks = nn.ModuleList(codebooks)
+    def quantize(self, x):
+        r"""
+        Return list of quantized features and the selected codewords by the residual quantization.
+        The code is selected by the residuals between x and quantized features by the previous codebooks.
+
+        Arguments:
+            x (Tensor): bottleneck feature maps to quantize.
+
+        Returns:
+            quant_list (list): list of sequentially aggregated and quantized feature maps by codebooks.
+            codes (LongTensor): codewords index, corresponding to quants.
+
+        Shape:
+            - x: (B, h, w, embed_dim)
+            - quant_list[i]: (B, h, w, embed_dim)
+            - codes: (B, h, w, d)
+        """
+        B, h, w, embed_dim = x.shape
+
+        residual_feature = x.detach().clone()
+
+        quant_list = []
+        code_list = []
+        aggregated_quants = torch.zeros_like(x)
+        for i in range(self.code_shape[-1]):
+            quant, code = self.codebooks[i](residual_feature)
+            # 就地操作，从residual_feature中减去quant的值，覆盖原来的值
+            residual_feature.sub_(quant)
+            aggregated_quants.add_(quant)
+
+            quant_list.append(aggregated_quants.clone())
+            code_list.append(code.unsqueeze(-1))
+        
+        codes = torch.cat(code_list, dim=-1)
+        return quant_list, codes
+    def forward(self, x):
+        x_reshaped = self.to_code_shape(x)
+        quant_list, codes = self.quantize(x_reshaped)
+
+        commitment_loss = self.compute_commitment_loss(x_reshaped, quant_list)
+        quants_trunc = self.to_latent_shape(quant_list[-1])
+        quants_trunc = x + (quants_trunc - x).detach()
+
+        return quants_trunc, commitment_loss, codes
+    
+    def compute_commitment_loss(self, x, quant_list):
+        r"""
+        Compute the commitment loss for the residual quantization.
+        The loss is iteratively computed by aggregating quantized features.
+        """
+        loss_list = []
+        
+        for idx, quant in enumerate(quant_list):
+            partial_loss = (x-quant.detach()).pow(2.0).mean()
+            loss_list.append(partial_loss)
+        
+        commitment_loss = torch.mean(torch.stack(loss_list))
+        return commitment_loss
+```
+
 ## HSTU
 
 [如何评价Meta最新推荐论文: 生成式推荐打败深度分层架构推荐？](https://mp.weixin.qq.com/s/MeH2drBIBML5OSfCujIJ0Q)
