--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2524,6 +2524,10 @@ aaren：
 
 [H2O: Heavy-Hitter Oracle for Efficient Generative Inference of Large Language Models](https://arxiv.org/pdf/2306.14048)
 
++ sparsity for small cache size：kv cache很稀疏，只要5%效果就可以了
++ Heavy-Hitters for low miss rate：一小部分的token贡献了大部分attention score
++ 贪心法选择需要干掉的token：假设总共需要保留k个token，对于第i个token，加进来后，遍历集合里的所有token，看干掉哪一个对attention score影响最小，就把它干掉
+
 ## TransNAR
 
 [拯救Transformer推理能力！DeepMind新研究TransNAR：给模型嵌入「算法推理大脑」](https://mp.weixin.qq.com/s/YPICpkYHAC7zTLC_0M_XkQ)
