--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2169,6 +2169,12 @@ conv1d参考torch官方[doc](https://pytorch.org/docs/stable/generated/torch.nn.
 + 输入：$$\left(N, C_{i n}, L_{i n}\right)$$
 + 输出：$$\left(N, C_{\text {out }}, L_{\text {out }}\right)$$
 
+其中，
+
+$$
+L_{\text {out }}=\left\lfloor\frac{L_{\text {in }}+2 \times \text { padding }- \text { dilation } \times(\text { kernel\_size }-1)-1}{\text { stride }}+1\right\rfloor
+$$
+
 当```groups==in_channels and out_channels=K*in_channels```，也叫depthwise convolution，K是depthwise乘子。即**每个输入通道都有自己的卷积核，并且只作用于该通道**。
 
 ```python
