--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -7433,6 +7433,19 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 [https://github.com/ContextualAI/gritlm](https://github.com/ContextualAI/gritlm)
 
 
+### LLM2Vec
+
+[LLM2Vec: Large Language Models Are Secretly Powerful Text Encoders](https://arxiv.org/pdf/2404.05961)
+
+[https://github.com/McGill-NLP/llm2vec](https://github.com/McGill-NLP/llm2vec)
+
++ 由3步组成：
+ + Bi-directional：把causal mask干掉，改成全1mask
+ + 引入masked next token predtion任务：类似mlm，mask掉中间的词，拿周围的词预测
+ + 对比学习simcse：前两步让模型有了bi-directional的能力，把所有词的emb通过pooling（实验表明mean pooling最有效）得到句子表示，同一句话里mask掉几个词的为正例，不同句子为负例，对比学习
+
+
+
 ## 其他
 
 [WWW 2024 | 工业界大模型在搜广推场景应用](https://zhuanlan.zhihu.com/p/686259205)
@@ -7524,6 +7537,38 @@ $$
 $$
 L=\frac{L_{c l}+\alpha L_{g e n}}{1+\alpha},
 $$
+
+
+## C-Star
+
+[Shopping Trajectory Representation Learning with Pre-training for E-commerce Customer Understanding and Recommendation](https://assets.amazon.science/c3/ee/721654a94b0a800cb7c534ba5bd8/shopping-trajectory-representation-learning-with-pre-training-for-e-commerce-customer-understanding-and-recommendation.pdf)
+
+Customer Shopping TrAjectory Representation Learning framework (C-STAR) 
+PR-Graph（product relational graph）：$$\mathcal{G}=(\mathcal{T}, \mathcal{E}, \mathcal{V})$$
+
++ $$\mathcal{T}$$：所有节点，15k
++ $$\mathcal{E}$$：所有边，417k，强关联的product才有边，例如共同购买
++ $$\mathcal{V}$$ ：每个节点对应的d维向量，$$\mathcal{V} \in \mathbb{R}^{|\mathcal{T}| \times d}$$
+
+用户的长度为$$N_i $$的历史序列就可以看成$$\mathcal{T}_i \subseteq \mathcal{T} \text {, i.e., } \mathcal{T}_i=\left[t_n^i\right]_{n=1}^{N_i} $$，并构成了子图$$\mathcal{G}_i \subseteq \mathcal{G} $$
+
+基于最优运输理论（Optimal Transport theory）：如何最高效地将一个分布变成另一个分布
+
+对于$$\boldsymbol{X} \sim P, \boldsymbol{X} \in \mathbb{R}^d$$，假设有一个函数$$f: \mathbb{R}^d \rightarrow \mathbb{R}$$，即$$f$$能把$$x$$从$$P$$分布变成另一个分布，称$$f_{\#} P$$是$$P$$的一个推前（push forward）。两个分布P和Q间的Wasserstein Distance定义为：
+
+$$
+W_p(P, Q)=\left(\inf _{f \in T P(P, Q)} \int\|x-f(x)\|^p d P(x)\right)^{\frac{1}{p}}, p \geq 1
+$$
+
+1维分布能直接算出最优距离，但对于高维分布来讲，没法直接算出来最优距离，有一个sliced-WD如下，其中$$g_{\boldsymbol{\theta}}(\boldsymbol{x})=\boldsymbol{\theta}^{\top} \boldsymbol{x}$$，而$$\boldsymbol{\theta} \in \mathbb{S}^{d-1}$$是一个d维的单位向量（unit vector，模长为1），$$\mathbb{S}^{d-1}$$是d维向量的超球面，$$g_{\theta_{\#}} P$$是$$P$$用$$g_{\boldsymbol{\theta}}$$的推前。这个距离同时满足正定、对称、三角不等式。
+
+$$
+S W_p(P, Q)=\left(\int_{\mathbb{S}^{d-1}}\left(W_p\left(g_{\theta \#} P, g_{\theta \#} Q\right)\right)^p d \theta\right)^{\frac{1}{p}}
+$$
+
+
+inter-trajectory distribution similarity: 不同用户的行为序列间的分布相似度
+intra-trajectory semantic correlation: 一个序列内部的语义相关性 
 
 
 # 世界模型
