--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -7445,6 +7445,12 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
  + 对比学习simcse：前两步让模型有了bi-directional的能力，把所有词的emb通过pooling（实验表明mean pooling最有效）得到句子表示，同一句话里mask掉几个词的为正例，不同句子为负例，对比学习
 
 
+## RecExplainer
+
+[RecExplainer: Aligning Large Language Models for Explaining Recommendation Models](https://arxiv.org/pdf/2311.10947)
+
+[https://github.com/microsoft/RecAI](https://github.com/microsoft/RecAI)
+
 
 ## 其他
 
