--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -790,6 +790,10 @@ D2Q 算法的具体做法如下：
 
 在ranking阶段，引入长期目标
 
+## ranking loss引入
+
+[KDD 2024 | 深入理解推荐模型中的辅助排序损失](https://mp.weixin.qq.com/s/Y4ErK09-_TSJ2m6lC6UGCA)
+
 # 多目标
 
 ## 多目标+推荐综述
@@ -957,6 +961,14 @@ PAL就是搞两个塔：
 
 [推荐系统之Position-Bias建模](https://mp.weixin.qq.com/s/as8MWJZ2SAVZedx2v02fmA)
 
+
+# 数据集的一些处理
+
+[KDD2024最佳学生论文解读，中科大、华为诺亚：序列推荐新范式DR4SR](https://mp.weixin.qq.com/s/kvSMzc_8NXGKvPN66rDhtg)
+
+[Dataset Regeneration for Sequential Recommendation](https://arxiv.org/abs/2405.17795)
+
+[https://github.com/USTC-StarTeam/DR4S](https://github.com/USTC-StarTeam/DR4S)
 
 # 工业界的一些推荐应用
 
