--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -4031,6 +4031,8 @@ Llama 3的主要亮点：
     + 又加上一个continued pretraining stage，将context windows增加到128k tokens
 + language model post-training：sft+dpo+新的能力（如工具使用，能提升代码和推理能力）+safety
 
+(toread)
+
 这里有一些总结：[关于post-training和一些思考](https://mp.weixin.qq.com/s/Bpd6_zq9kmTTeHxZ9WJJpw)
 
 为了支持多模态，还加入了如下3个stage：
